--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,16 +6,16 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    /* Output config */
+    "moduleResolution": "node",              // ✅ Not bundler
+    "noEmit": false,                         // ✅ Allow file generation
+    "outDir": "dist",                        // ✅ Output dir
+    "rootDir": ".",                          // ✅ Root of source files
     "isolatedModules": true,
-    "moduleDetection": "force",
-    "noEmit": true,
-    "jsx": "react-jsx",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "jsx": "react-jsx",
 
     /* Linting */
     "strict": false,
